adicao de index

--- a/checklist1.html
+++ b/checklist1.html
@@ -94,7 +94,7 @@
             <input type="submit" value="MÓDULO TESOURARIA" onclick="window.location.href='./checklist_tes.html';">
         </div>
 
-        <a href="./checklist.html">Voltar para o Login</a>
+        <a href="./index.html">Voltar para o Login</a>
     </div>
 </body>
 </html>
